fix: stars too big on non-tv screens

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -185,7 +185,7 @@ animation-delay: 0.5s;
 }
 
 .star {
-font-size: 1.5vw;
+font-size: min(1.5vw, 1.3vh);
 color: #333333;
 --star-color: #111111;
 }
